# LingDian

./: .gitignore  README.md  start.cmd  start.ps1
admin/: index.html  package.json  pnpm-lock.yaml
backend/: .env.example  README.md  package-lock.json  package.json  pyproject.toml
backend/prisma/: schema.prisma
backend/scripts/: seed-demo-data.mjs  sync-local-config.mjs
backend/src/: app.module.ts  main.ts
backend/src/common/constants/: response-code.ts
backend/src/common/exceptions/: app.exception.ts
backend/src/common/filters/: all-exceptions.filter.ts
backend/src/common/interceptors/: response.interceptor.ts
backend/src/config/: app.config.ts  env.validation.ts
backend/src/lingdian/: __init__.py
backend/src/modules/health/: health.controller.ts
backend/src/modules/menu/: menu.controller.ts
backend/src/modules/orders/: orders.controller.ts  orders.service.ts
backend/src/modules/orders/dto/: create-order.dto.ts  query-orders.dto.ts  update-order-status.dto.ts
backend/src/modules/products/: products.controller.ts  products.mapper.ts  products.service.ts
backend/src/modules/products/dto/: sync-product-config.dto.ts  update-sku-price.dto.ts  update-sku-stock.dto.ts
backend/src/modules/stores/: stores.controller.ts
backend/src/prisma/: prisma.service.ts
common/: package.json  tsconfig.json
docs/: 00-prd.md  01-overview.md  02-directory-structure.md  03-frontend-uniapp.md  04-frontend-admin.md  05-backend-python.md  06-development-guide.md  07-web-prd.md  README.md
theme/: color.ts  colors.css  colors.json  colors.scss
(+85 files in other folders)
